example/compilation/errors/semantic/type/undefined.arn

var x : int;
var z : x; // x is a variable not a type so undefined type x